<resources>
    <string name="app_name">指讯通</string>
    <string name="home">首页</string>
    <string name="back">返回</string>
    <string name="zczx">政策信息</string>
    <string name="wsbs">资源对接</string>
    <string name="xxjb">信息交办</string>
    <string name="cxgs">查询公示</string>
    <string name="bmfw">便民服务</string>
    <string name="about">关于我们</string>
    <string name="xtsz">系统设置</string>

    <string name="wggl">网格管理</string>
    <string name="ltjd">龙塔街道</string>
    <string name="jcsj">基础数据</string>
    <string name="tjfx">统计分析</string>
    <string name="gzgl">工作管理</string>
    <string name="sjcl">事件处理</string>
    <string name="gzrz">工作日志</string>
    <string name="gzrz_info">日志详情</string>
    <string name="add_gzrz">添加工作日志</string>
    <string name="add_sjcl">添加事件处理</string>
    <string name="rkgl">人口管理</string>
    <string name="txl">通讯录</string>
    <string name="jzbf">精准帮扶</string>
    <string name="kqdk">考勤打卡</string>
    <string name="kqqj">请   假</string>
    <string name="qjtx">请假调休</string>
    <string name="wgryxx">网格人员信息</string>


    <!--登录-->
    <string name="login_title">管理员登录</string>
    <string name="login_hint_userid">\t用户名/手机号</string>
    <string name="login_hint_pwd">\t请输入密码</string>
    <string name="login_forget">忘记密码>></string>
    <string name="login_regist">立即注册</string>
    <string name="login_code">\t获取验证码</string>
    <string name="login_wgy">\t网格人员</string>

    <string name="read_1">您已阅读了</string>


    <!--首页-->
    <string name="m_main_tab_name">指讯通网格信息化服务群众平台</string>
    <!--政务服务-->
    <string name="m_zwfw">政务服务</string>
    <string name="zwfw_qtfw">群团服务</string>
    <string name="zwfw_qtpt">群工平台</string>
    <string name="zwfw_jgcx">结果查询</string>
    <string name="zwfw_jgcxxq">结果查询详情</string>
    <string name="zwfw_yybs">预约办事</string>
    <string name="zwfw_yybslb">办事列表</string>
    <string name="zwfw_yybsinfo">预约办事时间</string>
    <string name="zwfw_dqfc">党群风采</string>
    <string name="zwfw_dqhd">党群活动</string>
    <string name="zwfw_zsdx">掌上党校</string>
    <string name="zwfw_sjxx">书记信箱</string>
    <string name="zwfw_sdxf">时代先锋</string>
    <string name="zwfw_ffcl">反腐倡廉</string>
    <string name="zwfw_zyzfw">自愿者服务</string>
    <string name="zwfw_sqtjxy">诉求提交协议</string>
    <string name="zwfw_sqtj">诉求提交</string>
    <string name="zwfw_sqgk">社区概况</string>
    <string name="zwfw_pasq">平安社区</string>


    <!--社区购物-->
    <string name="sqgw_tabname">社区购物</string>
    <!--办事指南-->
    <string name="bszn_tabname">办事指南</string>
    <string name="bszn_liebiao">办事指南列表</string>
    <string name="bszn_info">办理证件</string>

    <string name="no_data">没有查询到数据</string>


    <!--物业服务-->
    <string name="wyfw_gzbx">故障报修</string>
    <string name="wyfw_pjgl">评价调研</string>
    <string name="wyfw_pjgl_info">评价调研详情</string>
    <string name="wyfw_jftj">纠纷调解</string>
    <string name="wyfw_jftj_add">添加纠纷调解</string>
    <string name="wyfw_aqgl">安全管理</string>


    <!--商铺-->
    <string name="main_shop">商铺</string>


    <!--个人中心-->
    <string name="about_me">个人中心</string>
    <string name="me_fu_kuan">待付款</string>
    <string name="me_shou_huo">待收货</string>
    <string name="me_ping_jia">待评价</string>
    <string name="me_shou_hou">售后/退款</string>
    <string name="me_car">我的购物车</string>
    <string name="me_address">管理收货地址</string>
    <string name="me_communication">社区交流</string>
    <string name="me_kefu">在线客户</string>
    <string name="me_setting">设置</string>

    <string name="install_apk_path">me.xifengwanzhao.fileprovider</string>

    <string name="more">更多</string>


    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>


    <string name="setting_outLogin">退出登录</string>
    <string name="new_password"> 新密码</string>
    <string name="new_password_too">确认新密码</string>
    <string name="old_password">原始密码</string>
    <string name="sure_change">确认修改</string>
</resources>
