<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maop_bgcolor"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/me_back"
                android:orientation="vertical">

                <com.zxt.zxt_phone.view.widget.TitleLayout_white
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/action_tab_height" />

                <LinearLayout
                    android:id="@+id/preson_info_ly"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10">

                    <com.zxt.zxt_phone.view.customview.CircleImageView
                        android:id="@+id/user_photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="@dimen/dp_10"
                        android:src="@drawable/user_photo"
                        app:border_color="#50ffffff"
                        app:border_width="1dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="你好！用户名" />

                </LinearLayout>

            </LinearLayout>

            <!--全部订单-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/act_more_ly"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/dp_5"
                        android:gravity="center_vertical"
                        android:text="我的订单"
                        android:textColor="@color/act_title_font"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dp_10"
                        android:drawableRight="@drawable/right"
                        android:gravity="center"
                        android:text="@string/more"
                        android:textColor="@color/grey_dark_press"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_function_height"
                    android:layout_marginBottom="@dimen/home_function_border"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_fu_kuan"
                        style="@style/main_caidan_style"
                        android:drawableTop="@drawable/me_fu_kuan"
                        android:text="@string/me_fu_kuan" />

                    <TextView
                        android:id="@+id/tv_shou_huo"
                        style="@style/main_caidan_style"
                        android:drawableTop="@drawable/me_shou_huo"
                        android:text="@string/me_shou_huo" />

                    <TextView
                        android:id="@+id/tv_ping_jia"
                        style="@style/main_caidan_style"
                        android:drawableTop="@drawable/me_ping_jia"
                        android:text="@string/me_ping_jia" />

                    <TextView
                        android:id="@+id/tv_shou_hou"
                        style="@style/main_caidan_style"
                        android:drawableTop="@drawable/me_shou_hou"
                        android:text="@string/me_shou_hou" />

                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/me_buy_car"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/selector_white_grey_on_off"
                android:drawableLeft="@drawable/me_buy_car"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_20"
                android:text="@string/me_car"
                android:textColor="@color/black" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/me_my_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/selector_white_grey_click_bg"
                android:drawableLeft="@drawable/me_address"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_20"
                android:text="@string/me_address"
                android:textColor="@color/black" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/me_shequ_communication"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/selector_white_grey_click_bg"
                android:drawableLeft="@drawable/me_communication"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_20"
                android:text="@string/me_communication"
                android:textColor="@color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/me_kefu"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/selector_white_grey_click_bg"
                android:drawableLeft="@drawable/me_kefu"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_20"
                android:text="@string/me_kefu"
                android:textColor="@color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/me_setting"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/selector_white_grey_click_bg"
                android:drawableLeft="@drawable/setting"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_20"
                android:text="@string/me_setting"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>