<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modify_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zxt.zxt_phone.view.personal.ModifyPasswordActivity">


    <com.zxt.zxt_phone.view.widget.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_tab_height"/>


    <EditText
        android:id="@+id/old_pasword"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_gary_input_bg"
        android:drawableLeft="@drawable/forget_phone"
        android:drawablePadding="5dp"
        android:textCursorDrawable = "@null"
        android:gravity="center_vertical"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_dark_press"
        android:textSize="16sp"
        android:maxLines="1" />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_gary_input_bg"
        android:drawableLeft="@drawable/forget_pas"
        android:drawablePadding="5dp"
        android:textCursorDrawable = "@null"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_dark_press"
        android:textSize="16sp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/affirm_password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_gary_input_bg"
        android:drawableLeft="@drawable/forget_pas"
        android:drawablePadding="5dp"
        android:textCursorDrawable = "@null"
        android:gravity="center_vertical"
        android:hint="@string/new_password_too"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_dark_press"
        android:textSize="16sp"
        android:maxLines="1" />


    <Button
        android:id="@+id/btnOutLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_btn_click_bg"
        android:text="@string/sure_change"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</LinearLayout>
