<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zxt.zxt_phone.view.widget.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">



        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/zydj_banner" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120.0dip"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ltjd_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zydj_qtwz_ico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/ltjd"
                        android:textColor="@color/maop_text_color"
                        android:textSize="15.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/gainsboro" />

                <LinearLayout
                    android:id="@+id/jcsu_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zydj_qgxt_ico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/jcsj"
                        android:textColor="@color/maop_text_color"
                        android:textSize="15.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/gainsboro" />

                <LinearLayout
                    android:id="@+id/tjfx_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zydj_qtxt_ico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/tjfx"
                        android:textColor="@color/maop_text_color"
                        android:textSize="15.0sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/gainsboro" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120.0dip"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/gzgl_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zydj_wxqq_ico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/gzgl"
                        android:textColor="@color/maop_text_color"
                        android:textSize="15.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/gainsboro" />

                <LinearLayout
                    android:id="@+id/rkgl_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zydj_shzz_ico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/rkgl"
                        android:textColor="@color/maop_text_color"
                        android:textSize="15.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/gainsboro" />

                <LinearLayout
                    android:id="@+id/txl_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zydj_lgy_ico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/txl"
                        android:textColor="@color/maop_text_color"
                        android:textSize="15.0sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/gainsboro" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
